--- a/ConditionalRendering.html
+++ b/ConditionalRendering.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>条件渲染</title>
 <script src="vue.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <div id="app">
+	<!-- v-if/v-else-if/v-else 要紧贴在一起使用 -->
 	<div v-if="type === 'A'">
 	  A
 	</div>
@@ -21,6 +22,25 @@
 	</div>
 	<h1 v-show="ok">Hello!</h1>
 </div>
+
+<!-- v-if 是“真正”的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
+v-if 也是惰性的：如果在初始渲染时条件为假，则什么也不做——直到条件第一次变为真时，才会开始渲染条件块。
+相比之下，v-show 就简单得多——不管初始条件是什么，元素总是会被渲染，并且只是简单地基于 CSS 进行切换。
+一般来说，v-if 有更高的切换开销，而 v-show 有更高的初始渲染开销。
+因此，如果需要非常频繁地切换，则使用 v-show 较好；如果在运行时条件很少改变，则使用 v-if 较好。 -->
+<div id="conditionTest">
+	<div v-if="show" data-test="v-if">{{message}}</div>
+	<div v-show="show" data-test="v-show">{{message}}</div>
+
+	<!-- 为元素标签增加key值时，则表示其为页面上唯一的元素，VUE则不会再去复用以前的input标签 -->
+	<div v-if="show">
+		用户名:<input type="text" key="username"/>
+	</div>
+	<div v-else>
+		邮箱名:<input type="text" key="mailaddress"/>
+	</div>
+</div>
+
 <script type="text/javascript">
 var vm = new Vue({
 	el : "#app",
@@ -29,6 +49,22 @@ var vm = new Vue({
 		ok : false
 	}
 });
+
+var vm2 = new Vue({
+	el: "#conditionTest",
+	data () {
+		return {
+			show: false,
+			message: "Hello World!"
+		}
+	}
+});
+setTimeout(function () {
+    vm2.show = true;
+},2000)
+setTimeout(function () {
+    vm2.show = false;
+},4000)
 </script>
 <style type="text/css">
 
