--- a/ListRendering.html
+++ b/ListRendering.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+
+	<!-- 类似于 v-if，也可以利用带有 v-for 的 <template> 来循环渲染一段包含多个元素的内容。 
+		<template v-for="item in items"></template>-->
+
 	<div id="app">
 		<ul>
 			<!-- v-for遍历数组 -->
@@ -24,6 +28,8 @@
 	</div>
 
 	<ul id="test">
+		<!-- 在设置key值时，如果用index 列表又会频繁变更时 程序消耗比较大比较
+			这时，一般使用后端返回数据中的id（相当于数据库中主键）作为index来提高性能 -->
 		<p v-for="xxx,index in xxxs" :key="index">
 			index:{{index}} xxx:{{ xxx.xxx }}
 		</p>
@@ -48,21 +54,25 @@
 
 	<script type="text/javascript">
 		/**
- * 维护状态:
- * 当 Vue 正在更新使用 v-for 渲染的元素列表时，
- * 它默认使用“就地更新”的策略。如果数据项的顺序被改变，
- * Vue 将不会移动 DOM 元素来匹配数据项的顺序，而是就地更新每个元素，
- * 并且确保它们在每个索引位置正确渲染。这个类似 Vue 1.x 的 track-by="$index"。
- * 
- * 这个默认的模式是高效的，但是只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
- * 为了给 Vue 一个提示，以便它能跟踪每个节点的身份，从而重用和重新排序现有元素，你需要为每项提供一个唯一 key 属性：
- * 
- * 建议尽可能在使用 v-for 时提供 key attribute，除非遍历输出的 DOM 内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
- * 
- * <div v-for="item in items" v-bind:key="item.id">
-  	<!-- 内容 -->
-	</div>
- */
+		 * 维护状态:
+		 * 当 Vue 正在更新使用 v-for 渲染的元素列表时，
+		 * 它默认使用“就地更新”的策略。如果数据项的顺序被改变，
+		 * Vue 将不会移动 DOM 元素来匹配数据项的顺序，而是就地更新每个元素，
+		 * 并且确保它们在每个索引位置正确渲染。这个类似 Vue 1.x 的 track-by="$index"。
+		 * 
+		 * 这个默认的模式是高效的，但是只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
+		 * 为了给 Vue 一个提示，以便它能跟踪每个节点的身份，从而重用和重新排序现有元素，你需要为每项提供一个唯一 key 属性：
+		 * 
+		 * 建议尽可能在使用 v-for 时提供 key attribute，除非遍历输出的 DOM 内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
+		 * 
+		 * <div v-for="item in items" v-bind:key="item.id">
+			<!-- 内容 -->
+			</div>
+		 * 变异方法：
+		 * Vue 将被侦听的数组的变异方法进行了包裹，所以它们也将会触发视图更新。这些被包裹过的方法包括：
+		 * push() pop() shift() unshift() splice() sort() reverse()
+		 * 
+		*/
 
 		var vm = new Vue({
 			el: "#app",
